Remove --illegal-access=deny from startup scripts