@@ -1,3 +1,3 @@
 #!/bin/sh
 cd "$(dirname "$0")"
-java --illegal-access=deny -jar ExerciseSubmitter.jar
+java -jar ExerciseSubmitter.jar
