@@ -1,3 +1,3 @@
 @echo off
 cd %~dp0%
-java --illegal-access=deny -jar ExerciseSubmitter.jar
+java -jar ExerciseSubmitter.jar
